# seam_synchronizer

./: CMakeLists.txt  README.md  package.xml  run_computetime.sh  run_draw_py.sh  run_seam.sh
config/: config_computetime.yaml  config_computetime_common.yaml  config_computetime_t100.yaml  config_computetime_t105.yaml  config_computetime_t110.yaml  config_computetime_t115.yaml  config_computetime_t120.yaml  config_computetime_t125.yaml  config_computetime_t130.yaml  config_computetime_t135.yaml  config_computetime_t140.yaml  config_seam.yaml  config_seam_100.yaml  config_seam_105.yaml  config_seam_110.yaml  config_seam_115.yaml  config_seam_125.yaml  config_seam_130.yaml  config_seam_135.yaml  config_seam_140.yaml
include/: subscriber_compute_time.h  subscriber_seam.h
message_filters/sync_policies/: seam.h
results/validation_seam_computetime/B/: data_ct_B.txt
results/validation_seam_computetime/C/: data_ct_C.txt
results/validation_seam_computetime/Tw_Tb/: data_ct_ratio.txt
results/validation_seam_computetime/channel/: data_ct_N.txt
results/validation_seam_computetime/internal_length/: data_ct_length.txt
results/validation_seam_computetime/period/: data_ct_P.txt
scripts/: B_bound_between.py  C_bound.py  N_channel.py  P_period.py  T_length.py  Tw_Tb.py  compute_average_B.py  compute_average_C.py  compute_average_N.py  compute_average_P.py  compute_average_T.py  compute_average_ratio.py  copy_success_rate_B.py  copy_success_rate_C.py  copy_success_rate_N.py  copy_success_rate_P.py  copy_success_rate_T.py  copy_success_rate_ratio.py
src/: validation_seam.cpp  validation_seam_computetime.cpp
(+321 files in other folders)
